<resources>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">RecipeApp</string>
    <string name="action_settings">Settings</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="recipe">Recipe</string>
    <string name="ck_verify_email_message">Please check verification email.</string>
    <string name="success_login">Login successful</string>
    <string name="my_provider_name">com.bb.fileproviders</string>
    <string name="image_name_text">image_%s</string>
    <string name="date_format_text">DD_MM_YYYY_ss</string>
    <string name="image_postfix">.jpg</string>
    <string name="upload_recipe_button">Upload Recipe</string>
    <string name="select_image_button">Select Image</string>
    <string name="instructions_edittext">Instructions</string>
    <string name="ingredients_edittext">Ingredients</string>
    <string name="recipe_name_edittext">Recipe Name</string>
    <string name="log_username_editext">Username</string>
    <string name="log_password_edittext">Password</string>
    <string name="addrecipe">add recipe</string>
    <string name="go_back">Go Back</string>
    <string name="upload">Upload</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="name">Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="instruction">Instruction</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="recipe_instructions">Recipe Instructions</string>
</resources>
