<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_200dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <EditText
        android:id="@+id/recipe_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/recipe_name_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_image" />

    <EditText
        android:id="@+id/ingredients_edittext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ingredients_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name_edittext" />

    <EditText
        android:id="@+id/method_edittext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:ems="10"
        android:backgroundTint="@android:color/transparent"
        android:inputType="textMultiLine"
        android:hint="@string/instructions_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_edittext" />

    <Button
        style="@style/ButtonStyle"
        android:background="@color/colorOrange"
        android:id="@+id/select_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/select_image_button"
        app:layout_constraintBottom_toTopOf="@+id/upload_recipe_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/ButtonStyle"
        android:background="@color/colorOrange"
        android:id="@+id/upload_recipe_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:text="@string/upload_recipe_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>