<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/foodimage4"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/recipe_name"
            android:layout_width="231dp"
            android:layout_height="49dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="18dp"
            android:background="@color/colorWhite"
            android:fontFamily="cursive"
            android:hint="@string/recipe_name"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/recyclerview"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="336dp"
            android:layout_height="346dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="17dp"
            android:background="@color/colorWhite"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toTopOf="@+id/editText1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="217dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="6dp"
            android:autofillHints=""
            android:background="@color/colorWhite"
            android:ems="10"
            android:hint="@string/ingredient_name"
            android:inputType="textPersonName"
            android:textColor="@color/design_default_color_on_secondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview" />

        <Button
            android:id="@+id/button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_add_box_black_24dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:textColor="@color/cardview_dark_background"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview" />

        <Button
            android:id="@+id/button2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_indeterminate_check_box_black_24dp"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toEndOf="@+id/editText1"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview" />

        <Button
            android:id="@+id/button4"
            android:layout_width="184dp"
            android:layout_height="34dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="197dp"
            android:layout_marginBottom="60dp"
            android:background="@color/cardview_dark_background"
            android:fontFamily="serif"
            android:onClick="displayAll"
            android:text="@string/upload"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="23dp"
            android:background="@color/design_default_color_on_secondary"
            android:fontFamily="serif"
            android:onClick="goBack"
            android:text="@string/go_back"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/recyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="345dp"
            android:layout_height="61dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="21dp"
            android:background="@color/colorWhite"
            android:ems="10"
            android:hint="@string/recipe_instructions"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText1" />

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
